1.回顾Object.defineProperty方法.html

--- a/06_数据代理/1.回顾Object.defineProperty方法.html
+++ b/06_数据代理/1.回顾Object.defineProperty方法.html
@@ -35,7 +35,9 @@
         })
 
         // console.log(Object.keys(person));  //此方法可以把传入对象的所有属性属性名提取变成一个数组
-        
+
+        //for-in 循环是一种迭代对象属性的方法。它可以用于遍历对象中的所有可枚举属性，包括从原型链继承的属性。
+        //通常，我们使用 for-in 循环来遍历对象的键名。
         // for (const key in person) {
         //     console.log('-',key);
         //     console.log('@',person[key]);
