5.更新时的一个问题.html

--- a/12_列表渲染/5.更新时的一个问题.html
+++ b/12_列表渲染/5.更新时的一个问题.html
@@ -40,6 +40,11 @@
                 // this.persons[0] = {id:'001',name:'马老师',age:'50',sex:'男'} //不奏效
                 //上面方法Vue可能检测不到数据改变，使用数组对应的几个方法Vue能检测到
                 this.persons.splice(0,1,{id:'001',name:'马老师',age:'50',sex:'男'})
+
+                //splice方法
+                //参数1 必需。规定从何处添加/删除元素。该参数是开始插入和（或）删除的数组元素的下标，必须是数字。
+                //参数2 可选。规定应该删除多少元素。必须是数字，但可以是 "0"。如果未规定此参数，则删除从 index 开始到原数组结尾的所有元素。
+                //参数3 可选。要添加到数组的新元素
             }
         },
     })
