7.模拟一个数据监测.html

--- a/12_列表渲染/7.模拟一个数据监测.html
+++ b/12_列表渲染/7.模拟一个数据监测.html
@@ -8,6 +8,9 @@
 <body>
     <script>
 
+        //此中的代码模拟Vue2中数据监测的部分基础原理 ， 即get set等方法的调用时进行检测
+        //可查阅相关资料或AI学习
+
         let data = {
             name:'lsb',
             address:'ks',
